# memkoshi

./: .gitignore  README.md  pyproject.toml
memkoshi/: __init__.py  api.py  api.py.bak  mcp_server.py  stelline_bridge.py
memkoshi/cli/: main.py
memkoshi/core/: __init__.py  config.py  context.py  context_manager.py  events.py  evolution.py  exceptions.py  memory.py  patterns.py  pipeline.py  security.py  session.py
memkoshi/daemon/: __init__.py  client.py  protocol.py  server.py
memkoshi/extractors/: __init__.py  api.py  base.py  compare.py  hybrid.py  pi.py
memkoshi/search/: engine.py
memkoshi/storage/: __init__.py  base.py  migrations.py  sqlite.py
tests/unit/: test_api.py  test_api_extractor.py  test_cli.py  test_compare.py  test_config.py  test_context_manager.py  test_daemon.py  test_events.py  test_evolution.py  test_extractors.py  test_features_v02.py  test_mcp.py  test_migrations.py  test_models.py  test_patterns.py  test_pipeline.py  test_search.py  test_security.py  test_session_lifecycle.py  test_storage.py  test_v04_integration.py
