[project]
name = "memkoshi"
version = "0.4.0"
description = "The only agent memory system that learns and improves over time"
authors = [{name = "Memkoshi Team", email = "hello@memkoshi.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
    "velocirag>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
memkoshi = "memkoshi.cli.main:cli"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"